k8s/legacy/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: banco-srjm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
      annotations:
        traffic.sidecar.istio.io/excludeOutboundPorts: '5432'
    spec:
      automountServiceAccountToken: false
      containers:
      - name: backend
        image: srjm2024/banco-srjm-backend:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: '1'
            memory: 1Gi
        startupProbe:
          httpGet:
            path: /api/actuator/health/liveness
            port: 8080
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 60
        readinessProbe:
          httpGet:
            path: /api/actuator/health/readiness
            port: 8080
          periodSeconds: 10
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            path: /api/actuator/health/liveness
            port: 8080
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        volumeMounts:
        - name: application-config
          mountPath: /etc/banco
          readOnly: true
      volumes:
      - name: application-config
        secret:
          secretName: backend-application
