k8s/legacy/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: banco-srjm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      automountServiceAccountToken: false
      containers:
      - name: frontend
        image: srjm2024/banco-srjm-frontend:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 256Mi
        startupProbe:
          periodSeconds: 5
          failureThreshold: 30
          httpGet:
            path: /healthz
            port: 8080
        readinessProbe:
          periodSeconds: 10
          httpGet:
            path: /healthz
            port: 8080
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf
          readOnly: true
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx-main.conf
          readOnly: true
      volumes:
      - name: nginx-config
        configMap:
          name: frontend-nginx
