k8s/legacy/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: banco-srjm
spec:
  selector:
    app: backend
  ports:
  - name: http
    port: 8080
    targetPort: http
