k8s/legacy/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: banco-srjm
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 8080
    targetPort: http
