k8s/legacy/istio.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: banco-srjm
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - bancosrjm.geradorqrcode-srjm.uk
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: banco-srjm-tls
    hosts:
    - bancosrjm.geradorqrcode-srjm.uk
