k8s/legacy/Istio-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: banco-srjm
  namespace: banco-srjm
spec:
  hosts:
  - bancosrjm.geradorqrcode-srjm.uk
  gateways:
  - istio-system/banco-srjm
  http:
  - route:
    - destination:
        host: frontend.banco-srjm.svc.cluster.local
        port:
          number: 8080
